2014-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread::init_mainthread): Initialize thread mutex to
	type PTHREAD_MUTEX_RECURSIVE, just as for any other thread.

2014-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 32.

2014-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc: Fix typo in comment.

2014-07-16  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread::create): Handle stackaddr as upper bound address.
	Add comment.
	(pthread_attr_setstack): Store upper bound address in stackaddr.
	Explain why.
	(pthread_attr_getstack): Handle stackaddr as upper bound address.
	Add comment.
	(pthread_attr_setstackaddr): Add comment.
	(pthread_attr_getstackaddr): Add comment.
	(pthread_attr_getstacksize): Return default stacksize if stacksize has
	not been set by the application, just as on Linux.  Add comment.
	(pthread_getattr_np): Store upper bound address in stackaddr.  Explain
	why.
	* include/pthread.h: Remove outdated comment.
	(pthread_attr_getstackaddr): Mark as deprecated, as on Linux.
	(pthread_attr_setstackaddr): Ditto.

2014-07-15  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* sigproc.cc (sigproc_init): Set aside more buffer space for signal
	pipes.
	(sig_send): Retry WriteFiles which fail when there is no error but
	packbytes have not been sent.

2014-07-15  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* sigproc.cc (send_sig): Don't report an error if WriteFile succeeds.

2014-07-14  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* sigproc.cc (send_sig): Fix bad format in diagnostic output.

2014-07-14  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (cygheap_domain_info::init): Correctly set
	lowest_tdo_posix_offset to UNIX_POSIX_OFFSET.
	(fetch_posix_offset): Redesign to fake a POSIX offset in all cases
	where we can't fetch a non-0 POSIX offset from our primary domain.

2014-07-14  Yaakov Selkowitz  <yselkowitz@cygwin.com>
